# omikuji

./: .gitignore  README.md  flake.nix
crates/omikuji/: Cargo.toml  build.rs
crates/omikuji-core/: Cargo.toml
crates/omikuji-core/src/: component_state.rs  components_config.rs  defaults.rs  dll_packs.rs  fs_util.rs  install_sizes.rs  lib.rs  migration.rs  prefixes.rs  settings.rs  template_vars.rs  ui_settings.rs
crates/omikuji-core/src/archive_source/: mod.rs
crates/omikuji-core/src/desktop/: mod.rs
crates/omikuji-core/src/discord/: mod.rs
crates/omikuji-core/src/downloads/: gogdl.rs  legendary.rs  mod.rs  source.rs
crates/omikuji-core/src/endfield/: source.rs
crates/omikuji-core/src/epic/: mod.rs  updates.rs
crates/omikuji-core/src/gachas/: remote.rs  state.rs  strategies.rs
crates/omikuji-core/src/gog/: mod.rs  updates.rs
crates/omikuji-core/src/hoyo/: source.rs
crates/omikuji-core/src/hoyo/sophon/: patcher.rs
crates/omikuji-core/src/launch/: mod.rs
crates/omikuji-core/src/media/: mod.rs
crates/omikuji-core/src/process/: mod.rs
crates/omikuji-core/src/runners/: mod.rs
crates/omikuji-core/src/scripts/: exec.rs
crates/omikuji-core/src/steam/: local.rs  mod.rs  shortcuts.rs
crates/omikuji-core/src/wine_tools/: mod.rs
crates/omikuji/qml/: ConsoleMode.qml  Main.qml  RunExe.qml
crates/omikuji/qml/components/: Theme.qml
crates/omikuji/qml/components/cards/: BaseCard.qml  CardGrid.qml  StatusBadge.qml
crates/omikuji/qml/components/consolemode/: ConsoleCardRow.qml
crates/omikuji/qml/components/controls/: ExpansionHint.qml  IconButton.qml  KeyValueTable.qml  LabeledSwitch.qml  M3Button.qml  M3Dropdown.qml  M3FileField.qml  M3Slider.qml  M3SpinBox.qml  M3TextField.qml  OutputLog.qml  PlayButton.qml  ResizeGrips.qml  ThemedLogHighlighter.qml
crates/omikuji/qml/components/dialogs/: ArchiveManageDialog.qml  ArchiveSourceDialog.qml  CategoryEditDialog.qml  ConfirmDialog.qml  ContextMenu.qml  DefaultsApplyDialog.qml  DialogCard.qml  DialogSection.qml  EpicInstallDialog.qml  ErrorDialog.qml  FontSizesDialog.qml  GachaInstallDialog.qml  GameCategoriesDialog.qml  GameLogsWindow.qml  GogInstallDialog.qml  LogRulesDialog.qml  MigrationDialog.qml  PrefixCreateDialog.qml  PrefixDetailDialog.qml  PrefixPrepDialog.qml  RadiiDialog.qml  RunCommandDialog.qml  ScriptRunDialog.qml  (+5 more)
crates/omikuji/src/: app_font.cpp  main.rs  single_instance.rs  tray_native.cpp
crates/omikuji/src/bridge/: archive_manager.rs  defaults.rs  download_model.rs  epic_model.rs  game_model.rs  gamepad.rs  gog_model.rs  log_highlighter.rs  migration.rs  mod.rs  ofuda.rs  tray.rs  ui_settings.rs
crates/omikuji/src/cli/: mod.rs
(+86 files in other folders)
