[package]
name = "omikuji-core"
version = "0.5.1"
description = "Core library for omikuji — wine apps launcher logic"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "gzip"] }
tracing = "0.1"
dirs = "6"
unicode-normalization = "0.1"
chrono = "0.4"
lazy_static = "1"
indicatif = "0.17"
which = "7"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"
shellexpand = "3"
async-trait = "0.1"
futures-util = "0.3"
prost = "0.13"
zstd = "0.13"
md-5 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
xz2 = "0.1"
notify = "8"
discord-rich-presence = "1"
crc32fast = "1"
ash = "0.38"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
